--- a/src/public/css/loginRegister.css
+++ b/src/public/css/loginRegister.css
@@ -1,5 +1,5 @@
  .llContainer{
-  background-color: thistle;
+  background-color: whitesmoke;
     box-shadow: inset 0px 7px 20px 5px rgba(2, 2, 2, 0.50);
  }
 
