--- a/src/views/products/indexProduct.ejs
+++ b/src/views/products/indexProduct.ejs
@@ -15,7 +15,7 @@
 
 
                     <% if (locals.userLogged) { %>
-                        <button class="productButtons" id="buttonAdm"><a class='button-detalle-de-producto'
+                        <button class="admButtons" id="buttonAdm"><a class='button-detalle-de-producto'
                                 href="/products/create">crear Producto </a></button>
                         <% } %>
 
