--- a/src/public/css/products.css
+++ b/src/public/css/products.css
@@ -109,6 +109,17 @@ html {
     transition: 1s;
 }
 
+.admButtons{
+    height: 36px;
+    padding: 0px 10px;
+    background-color: hotpink;
+    box-shadow: inset 5px -5px 20px 0px rgba(2, 2, 2, 0.50);
+    border: none;
+    border-radius: 15px;
+    color: rgb(255, 255, 255);
+    font-family: Montserrat, sans-serif;
+}
+
 #buttonAdm {
     height: 36px;
     padding: 0px 10px;
