--- a/src/public/css/queries.css
+++ b/src/public/css/queries.css
@@ -272,8 +272,8 @@
     }
 
     #buttonAdm {
-        right: -11% !important;
-        font-size: 29px;
+        right: -44% !important;
+        font-size: 19px;
     }
 
     .productList {
@@ -318,7 +318,8 @@
         padding: 0 31% !important;
     }
 
-    .createForm input, textarea {
+    .createForm input,
+    textarea {
         width: 85% !important;
         height: 44px !important;
     }
@@ -390,7 +391,7 @@
         height: 417px !important;
         width: 93% !important;
         margin-bottom: 12% !important;
-        
+
     }
 
     .user_options-forms .user_forms-signup,
@@ -404,7 +405,8 @@
 
     }
 
-    .user_options-registered, .user_options-unregistered {
+    .user_options-registered,
+    .user_options-unregistered {
         padding: 123px 63px !important;
     }
 
@@ -427,7 +429,8 @@
         margin-top: 8%;
     }
 
-    .footerDetail, .footerRoutes {
+    .footerDetail,
+    .footerRoutes {
         margin: 14px;
     }
 
@@ -442,15 +445,23 @@
         right: -29% !important;
     }
 
+    nav .menuProfileContainer .me-information-toggle h3 {
+        padding: 19px !important;
+    }
+
+    nav {
+        height: 123px !important;
+    }
+
     .productTitle {
         font-size: 33px !important;
         margin-top: 4px !important;
     }
 
     #buttonAdm {
-        right: -12% !important;
-        padding: 0 30% !important;
-        font-size: 35px;
+        right: -42% !important;
+        /* padding: 0 30% !important; */
+        font-size: 29px;
     }
 
     .productButtonsContainer {
@@ -473,6 +484,48 @@
 
     .wholeInfo {
         font-size: 38px;
+    }
+
+}
+
+/* big screen queries  */
+
+@media (min-width: 2560px) {
+    .trending, .trendingTwo, .trendingThree {
+        width: calc(61% / 3) !important;
+        padding: 4rem !important;
+    }
+
+    #prev, #prev2, #prev3 {
+        margin-top: -15% !important;
+    }
+
+    #next, #next2, #next3 {
+        margin-top: -15% !important;
+    }
+
+
+    #buttonAdm {
+        right: -47% !important;
+    }
+
+    .productList {
+        width: 20% !important;
+        height: 480px !important;
+        padding: 3% !important;
+    }
+
+    .productImg {
+        width: 100% !important;
+    }
+
+    .productText, .productDecimals {
+        width: 72% !important;
+        font-size: 20px !important;
+    }
+
+    .productButtons {
+        padding: 12px 23% !important;
     }
 
 }
