--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -12,7 +12,7 @@
                 <img class="logoSearch" src="/images/logo/logoprueba.jpg" alt="logo">
 
                 <form action="submit" class="searchForm">
-                    <input class="searchFormInput" type="text" placeholder="Que estas Buscando ...?">
+                    <input class="searchFormInput" id="buscador" type="text" placeholder="Que estas Buscando ...?">
                     <button class="searchFormButton"> Buscar </button>
                 </form>
             </div>
