--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -104,6 +104,10 @@ body {
 }
 
 .details {
+  background: url(/images/background/back.jpg);
+  background-repeat: round;
+  background-size: cover;
+  background-blend-mode: unset;
   display: grid;
   width: 100%;
   height: 70px;
@@ -141,7 +145,7 @@ body {
 
 }
 
-.personalInfo{
+.personalInfo {
   display: grid;
   width: 100%;
   padding: 3%;
@@ -152,7 +156,7 @@ body {
   box-shadow: inset 0px 1px 20px 0px rgba(2, 2, 2, 0.50);
 }
 
-.infoProfiledb-hidden{
+.billingInfo {
   display: grid;
   width: 100%;
   padding: 3%;
@@ -160,10 +164,11 @@ body {
   bottom: 37px;
   border-radius: 0 0 8px 8px;
   border: 1px solid #ccc;
-  box-shadow: inset 0px 1px 20px 0px rgba(2, 2, 2, 0.50)
+  box-shadow: inset 0px 1px 20px 0px rgba(2, 2, 2, 0.50);
+  text-align: center;
 }
 
-#buttonAdmP {
+.admButtons {
   height: 36px;
   padding: 0px 10px;
   background-color: hotpink;
@@ -177,6 +182,20 @@ body {
   margin-top: 14px;
 }
 
+.billingInfo,
+.personalInfo {
+
+  color: #555;
+
+}
+
+.columnOne,
+.columnTwo {
+  box-shadow: inset 0px 1px 20px 0px rgba(2, 2, 2, 0.50);
+
+}
+
+
 .links {
   display: grid;
   background: url(/images/background/back.jpg);
@@ -184,19 +203,34 @@ body {
   background-size: cover;
   background-blend-mode: unset;
   width: 100%;
-  height: 70px;
+  height: 100px;
   padding: 5%;
   position: relative;
-  bottom: 15px;
+  bottom: 41px;
   border-radius: 0 0 8px 8px;
   border: 1px solid #ccc;
   box-shadow: inset 0px 1px 20px 0px rgba(2, 2, 2, 0.50);
+  margin-bottom: 1%;
 
 }
 
 .describeMe,
-.socialsLink, .personalInfo {
+.socialsLink,
+.personalInfo {
   text-align: center;
   margin: 5px;
 }
 
+
+.profileFormss input {
+  width: 70%;
+  border-radius: 15px;
+  border: none;
+  outline: none;
+  height: 30px;
+  padding: 0px 25px;
+  font-size: 1rem;
+  margin-bottom: 4%;
+  text-align: center;
+  color: hotpink;
+}
