--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -6,6 +6,8 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/439c181295.js" crossorigin="anonymous"></script>
+    <!-- Replace "test" with your own sandbox Business account app client ID -->
+    <script src="https://www.paypal.com/sdk/js?client-id=AbmhyHBnQTzVSd1X0LjLELrA_E_215ZXL_a8C8X7WifYWXOyzWQGZyk4MfpE-J0KfjVzSfwvS29dmbLH currency=COP"></script>
 
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/partials.css">
