final commit 1 al 7

--- a/src/public/css/loginRegister.css
+++ b/src/public/css/loginRegister.css
@@ -178,7 +178,7 @@
    font-family: "Montserrat", sans-serif;
    font-size: 1rem;
    font-weight: 300;
-   color: lightgray;
+   color: hotpink;
    transition: border-color 0.2s ease-in-out;
  }
 
