--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -42,7 +42,7 @@
                     <div class="me-information-toggle">
                         <h3 id="mi-perfil">Mi Perfil</h3>
                         <% if (locals.userLogged) { %>
-                            <h3 id="editar-producto">Editar un Producto</h3>
+                            <h3 id="editar-producto">Productos</h3>
                             <h3 id="configuracion">Configuración</h3>
                             <!-- else adm -->
                             <h3 id="centro-ayuda">Centro de Ayuda</h3>
